# lintoko

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  deny.toml  dist-workspace.toml  justfile  test-data.mo
.agents/skills/lintoko/: SKILL.md
.claude/skills/lintoko/: SKILL.md
.github/workflows/: ci.yml  release-pr.yml  tag-release.yml
custom-rules/: assign-minus.toml  assign-plus.toml  no-result.toml  pun-fields.toml
default-rules/: case-functions.toml  case-types.toml  no-bool-switch.toml  only-persistent-actor.toml  pun-fields.toml  unneeded-return.toml
example-rules/: allowed-directories.toml  case-types.toml  complexity-limit.toml  nesting-limit.toml  no-bool-switch.toml  no-let-else.toml  no-pure-data-structures.toml  only-return-primitives.toml  pun-fields.toml  shared-caller.toml  transient-usage.toml  types-only.toml  unneeded-return.toml
src/: custom_predicates.rs  lib.rs  main.rs
src/snapshots/: lintoko__test__it_lints.snap  lintoko__test__it_lints_custom_rules.snap  lintoko__test__it_lints_default_rules.snap  lintoko__test__it_lints_example_rules.snap  lintoko__test__it_lints_with_textual_output.snap
